fixed styles for lang helper (was hardly visible if body text was set to white)
--HG--
extra : convert_revision : svn%3A814373f1-6757-f048-7203-0cfca3d650a3/trunk%40228

--- a/src/templates/main/css/main.css
+++ b/src/templates/main/css/main.css
@@ -18,6 +18,12 @@ div.langtooltip {
 	z-index:111111111;
 	padding: 5px 10px;
 	background: #ffc;
+	color: black;
+	font-family: Tahoma, sans-serif;
+	font-size: 11px;
+	line-height: 1.56em;
+	display: block;
+	margin: 0px;
 	margin-top:10px;
 	margin-left: 10px;
 	border: 1px solid #cca;
